# simple_python_cpp_module

./: CMakeLists.txt  README.md  Source.cpp
.github/: FUNDING.yml
